# aivika-branches

./: CHANGELOG.md  README.md  aivika-branches.cabal  aivika-branching-process.cabal
Simulation/Aivika/: Branch.hs
Simulation/Aivika/Branch/: Br.hs  Event.hs  Generator.hs  QueueStrategy.hs
Simulation/Aivika/Branch/Internal/: Br.hs  Branch.hs  Ref.hs
Simulation/Aivika/Branch/Internal/Ref/: Lazy.hs  Strict.hs
Simulation/Aivika/Branch/Ref/: Base.hs
Simulation/Aivika/Branch/Ref/Base/: Lazy.hs  Strict.hs
examples/: MachRep1.hs
tests/: Furnace.hs  InspectionAdjustmentStations.hs  MachRep1.hs
